tests/should_fail/function_return_mismatch.luma
let bad: fn(Number): Number = fn(x: Number): Number do
  "oops"  -- returning String instead of Number
end
